	* src/seahorse-key-manager.c:
	* src/seahorse-key-manager.glade:
	* src/seahorse-key-manager.ui:
	* src/seahorse-keyserver-results.c:
	* src/seahorse-keyserver-results.glade:
	* src/seahorse-keyserver-results.ui: Use a GtkUIManager based 
	UI for menus and toolars.
	* libseahorse/seahorse-prefs-cache.c: Fix problem with controls
	not being set to initial state. See bug #304566
	
2005-05-15  Nate Nielsen  <nielsen@memberwebs.com>

	* libseahorse/seahorse-gconf.c: 
	* libseahorse/seahorse-hkp-source.c: Fix compile warnings
	* data/seahorse.schemas.in:
	* libseahorse/seahorse-keyserver-control.c:
	* libseahorse/seahorse-prefs.c:
	* libseahorse/seahorse-server-source.c:
	* libseahorse/seahorse-server-source.h:
	* src/seahorse-keyserver-search.c:
	* src/seahorse-keyserver-sync.c: Fix gconf key handling for our 
	stable release. Removed old keys. Parse all_keyservers key for
	compatibility with future releases.
	
2005-05-14  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-preferences.c: HIGify 'Visible Columns' tab.
    Patch from Jim Pharis (bug #304212)

2005-05-08  Nate Nielsen  <nielsen@memberwebs.com>

    * src/main.c: Display command line help.
    Patch by Adam Schreiber (bug #303463)
	* agent-seahore-agent.c: Use popt for command line handling.
	Patch by Adam Schreiber (bug #303495)
	
2005-05-07  Nate Nielsen  <nielsen@memberwebs.com>

    * NEWS: New release
    * configure.in: New version 0.7.9
    * Branched seahorse-0-8

2005-05-04  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-cache.c: Handle empty passwords properly
    Patch by Adam Schreiber (bug #169145)
    
2005-05-01  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-op.c:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h: Add option to seahorse_util_write_data_*
    to supress release of data.
	* libseahorse/seahorse-vfs-data.c: Fix problem with closing files
	hanging under certain circumstances.