@@ -12,6 +12,8 @@
 	UI for menus and toolars.
 	* libseahorse/seahorse-prefs-cache.c: Fix problem with controls
 	not being set to initial state. See bug #304566
+	* agent/seahorse-agent-cache.c: When gconf cache_authorize setting
+	is set to false, clear the cache. Closes a small security hole.
 	
 2005-05-15  Nate Nielsen  <nielsen@memberwebs.com>
 
